feat(Repo structure)

--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
     "        answer = response.choices[0].message.content\n",
     "\n",
     "        try:\n",
-    "            rational_step = answer.split(\" </think>\")[0].replace(\"<think> \", \"\")\n",
-    "            final_answer = answer.split(\" </think>\")[1].replace(\"<answer> \", \"\").replace(\" </answer>\", \"\").replace(\"\\n\", \"\")\n",
+    "            rational_step = answer.split(\"</think>\")[0].replace(\"<think>\", \"\")\n",
+    "            final_answer = answer.split(\"</think>\")[1].replace(\"<answer>\", \"\").replace(\"</answer>\", \"\").replace(\"\\n\", \"\")\n",
     "        except:\n",
     "            rational_step = \"format error\"\n",
     "            final_answer = \"format error\"\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,12 +106,13 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "import numpy"
+    "import numpy\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,14 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.5088]], grad_fn=<SigmoidBackward0>)\n"
+      "tensor([[0.4909],\n",
+      "        [0.4907]], grad_fn=<SigmoidBackward0>)\n"
      ]
     }
    ],
@@ -179,15 +181,15 @@
     "layer_config_embedding = \"512 256\"\n",
     "layer_config_general = \"256 128 1\"\n",
     "model = ModelRewardPrediction(layer_config_embedding, layer_config_general)\n",
-    "x1 = torch.randn(1, 768)\n",
-    "x2 = torch.randn(1, 768)\n",
+    "x1 = torch.randn(2, 768)\n",
+    "x2 = torch.randn(2, 768)\n",
     "output = model([x1, x2])\n",
     "print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +198,7 @@
        "torch.Size([1, 768])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,62 +250,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = nn.BCELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+    "optimizer = optim.Adam(model_reward_accuracy.parameters(), lr=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Question: Let $x$ , $y$ and $z$ all exceed $1$ and let $w$ be a positive number such that $\\log_xw=24$ , $\\log_y w = 40$ and $\\log_{xyz}w=12$ . Find $\\log_zw$ .\n",
-      "Answer: 60\n",
-      "Model Answer: 60\n",
-      "Score: tensor([[1.]])\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(1):\n",
+    "training_dict = {\n",
+    "    'Question_number': [],\n",
+    "    'Question': [],\n",
+    "    'Score': [],\n",
+    "    'Loss': []\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(4):\n",
     "    question = AIME_Dataset.iloc[i]['Question']\n",
     "    answer = AIME_Dataset.iloc[i]['Answer']\n",
     "\n",
-    "    rational_step, model_answer = model_rational_steps.question_steps_answer(question=question, system_prompt=system_prompt+AIME_Dataset_clarification_prompt)\n",
+    "    question_embedding_list = []\n",
+    "    rational_step_embedding_list = []\n",
+    "    score_list = []\n",
+    "    for j in range(3):\n",
+    "        rational_step, model_answer = model_rational_steps.question_steps_answer(question=question, system_prompt=system_prompt+AIME_Dataset_clarification_prompt)\n",
+    "        model_answer = model_answer.replace(\" \", \"\")\n",
     "\n",
-    "    model_answer = model_answer.replace(\" \", \"\")\n",
+    "        score = 0\n",
+    "        if model_answer == answer:\n",
+    "            score = 1\n",
+    "        \n",
+    "        score = torch.tensor(score).float().view(1, 1)\n",
+    "        question_embedding = torch.tensor(get_embedding(question)).unsqueeze(0)\n",
+    "        rational_step_embedding = torch.tensor(get_embedding(rational_step)).unsqueeze(0)\n",
     "\n",
-    "    score = 0\n",
-    "    if model_answer == answer:\n",
-    "        score += 1\n",
+    "        score_list.append(score)\n",
+    "        question_embedding_list.append(question_embedding)\n",
+    "        rational_step_embedding_list.append(rational_step_embedding)    \n",
     "    \n",
-    "    score = torch.tensor(score).float().view(1, 1)\n",
-    "    question_embedding = torch.tensor(get_embedding(question)).unsqueeze(0)\n",
-    "    rational_step_embedding = torch.tensor(get_embedding(rational_step)).unsqueeze(0)\n",
-    "    model_answer_embedding = torch.tensor(get_embedding(model_answer)).unsqueeze(0)\n",
-    "\n",
-    "    print(f\"Question: {question}\")\n",
-    "    print(f\"Answer: {answer}\")\n",
-    "    print(f\"Model Answer: {model_answer}\")\n",
-    "    print(f\"Score: {score}\")\n",
-    "    print(\"\")\n",
+    "    score = torch.cat(score_list, dim=0)\n",
+    "    question_embedding = torch.cat(question_embedding_list, dim=0)\n",
+    "    rational_step_embedding = torch.cat(rational_step_embedding_list, dim=0)\n",
     "\n",
     "    optimizer.zero_grad()\n",
     "    outputs = model_reward_accuracy([question_embedding, rational_step_embedding])\n",
     "    loss = criterion(outputs, score)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
-    "    \n",
+    "\n",
+    "    training_dict['Question_number'].append(i)\n",
+    "    training_dict['Question'].append(question)\n",
+    "    training_dict['Score'].append(score.mean().item())\n",
+    "    training_dict['Loss'].append(loss.item())\n",
+    "\n",
+    "    time.sleep(60)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_df = pd.DataFrame(training_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Question_number</th>\n",
+       "      <th>Question</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Let $x$ , $y$ and $z$ all exceed $1$ and let $...</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.682087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Let $f(x)=|x-p|+|x-15|+|x-p-15|$ , where $0 &lt; ...</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.682019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>What is the product of the real roots of the e...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.728643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>A machine-shop cutting tool has the shape of a...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.659012</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Question_number                                           Question  \\\n",
+       "0                0  Let $x$ , $y$ and $z$ all exceed $1$ and let $...   \n",
+       "1                1  Let $f(x)=|x-p|+|x-15|+|x-p-15|$ , where $0 < ...   \n",
+       "2                2  What is the product of the real roots of the e...   \n",
+       "3                3  A machine-shop cutting tool has the shape of a...   \n",
+       "\n",
+       "      Score      Loss  \n",
+       "0  0.666667  0.682087  \n",
+       "1  0.666667  0.682019  \n",
+       "2  0.000000  0.728643  \n",
+       "3  1.000000  0.659012  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1738352235"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(time.time())"
    ]
   },
   {
