save and load trained models

--- a/main.ipynb
+++ b/main.ipynb
@@ -445,6 +445,97 @@
     "* Pass all to actual code\n",
     "* Comment code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_metadata = pd.read_parquet(\"trained_models/1738521745/training_log.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Question_number</th>\n",
+       "      <th>Question</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Loss</th>\n",
+       "      <th>Output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>The integer $n$ is the smallest positive multi...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.683444</td>\n",
+       "      <td>0.504875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17</td>\n",
+       "      <td>A point $P$ is chosen in the interior of $\\tri...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.659637</td>\n",
+       "      <td>0.517039</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Question_number                                           Question  Score  \\\n",
+       "0               16  The integer $n$ is the smallest positive multi...    1.0   \n",
+       "1               17  A point $P$ is chosen in the interior of $\\tri...    1.0   \n",
+       "\n",
+       "       Loss    Output  \n",
+       "0  0.683444  0.504875  \n",
+       "1  0.659637  0.517039  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_metadata"
+   ]
   }
  ],
  "metadata": {
